objects/recordval__rv2JobResult__c.object
<CustomObject>
    <fields>
        <fullName>recordval__Amber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__Black__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Black</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__Green__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recordval__Record__c</fullName>
        <externalId>true</externalId>
        <label>Record</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__Red__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Red</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__ValidationCount__c</fullName>
        <formula>recordval__Amber__c +  recordval__Green__c +  recordval__Red__c + recordval__Black__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__ValidationRequestCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Validation Request Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__rv2Job__c</fullName>
        <label>RV Job</label>
        <referenceTo>recordval__rv2Job__c</referenceTo>
        <relationshipLabel>RV Job Results</relationshipLabel>
        <relationshipName>RV_Job_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>recordval__validation__c</fullName>
        <label>Validation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>RV Job Result</label>
    <nameField>
        <displayFormat>RVJR{000000000}</displayFormat>
        <label>RV Job Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RV Job Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>